--- a/star-signs/package.json
+++ b/star-signs/package.json
@@ -20,6 +20,7 @@
   "author": "GitHub",
   "license": "CC0-1.0",
   "devDependencies": {
+    "@electron/packager": "^18.1.3",
     "electron": "^26.4.0"
   },
   "dependencies": {
