--- a/moon.service
+++ b/moon.service
@@ -8,7 +8,8 @@ Environment=PYTHONUNBUFFERED=1
 Type=simple
 ExecStart=/usr/bin/python /home/moon/service/moon.py
 WorkingDirectory=/home/moon/service
-Restart=always
+Restart=on-failure
+RestartSec=1sRestart=always
 
 [Install]
 WantedBy=multi-user.target
