--- a/star-signs/package.json
+++ b/star-signs/package.json
@@ -4,7 +4,8 @@
   "description": "A minimal Electron application with node serialport",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "pack": "npx electron-packager . stars --overwritel"
   },
   "repository": {
     "type": "git",
